--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 			</article>
 
 		<!-- Feature 2 -->
-			<article class="container box style1 left">
-				<a href="#" class="image fit"><img src="images/fulls/Dinnr.PNG" alt="" style="left: -250px;"/></a>
+			<article class="container box style1 left" style="align-items: center">
+				<a href="#" class="image fit"><img src="images/fulls/Dinnr.PNG" alt="" style="width:auto;height:100%;vertical-align: middle"/></a>
 				<div class="inner">
 					<header>
 						<h2>Dinnr<br />
@@ -283,7 +283,7 @@
 			<ul class="icons">
 				<li><a href="https://github.com/RMaldonado12" class="icon brands fa-github"><span class="label">Github</span></a></li>
 				<li><a href="https://www.linkedin.com/in/richardgmaldonado/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-				<li><a href="https://resume.creddle.io/resume/1zf7r60x2ds" class="far fa-file"><span class="label">Resume</span></a></li>
+				<li><a href="https://resume.creddle.io/resume/1zf7r60x2ds" style="font-weight:bold;"><span class="label">Resume</span></a></li>
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
