project pages added

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
-				<a href="#" class="image fit"><img src="images/fulls/PC_Tech_app.PNG" alt="" style="width:500px;height:auto;top:22%;left:0px;"/></a>
+				<a href="./pages/PC_Tech.html" class="image fit"><img src="images/fulls/PC_Tech_app.PNG" alt="" style="width:500px;height:auto;top:22%;left:0px;"/></a>
 				<div class="inner" id='pc-tech'>
 					<header>
 						<h2>PC Tech</h2>
