--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 					</div>
 				</article>
 				<footer>
-					<a href="#first" class="button style2 scrolly">My Projects</a>
+					<a href="#second" class="button style2 scrolly">My Projects</a>
 				</footer>
 			</section>
 
 		<!-- Feature 1 -->
-			<article id="first" class="container box style1 right">
+			<article id="second" class="container box style1 right">
 				<a href="./pages/PC_Tech.html" class="image fit"><img src="images/fulls/PC_Tech_app.PNG" alt="" style="width:500px;height:auto;top:22%;left:0px;"/></a>
 				<div class="inner" id='pc-tech'>
 					<header>
@@ -76,7 +76,7 @@
 
 		<!-- Feature 2 -->
 			<article class="container box style1 left" style="align-items: center">
-				<a href="#" class="image fit"><img src="images/fulls/Dinnr.PNG" alt="" style="width:auto;height:100%;vertical-align: middle"/></a>
+				<a href="./pages/Dinnr.html" class="image fit"><img src="images/fulls/Dinnr.PNG" alt="" style="width:auto;height:100%;vertical-align: middle"/></a>
 				<div class="inner">
 					<header>
 						<h2>Dinnr<br />
