added project nav button

--- a/pages/Dinnr.html
+++ b/pages/Dinnr.html
@@ -55,11 +55,27 @@
 				<header>
 					<h2>Overview</h2>
           <p>Group project created in Code Platoon coding bootcamp</p>
-				</header>
+        </header>
+        <h3>
+          React frontend
+        </h3>
+        <p>
+          <a href="https://github.com/kiloplatoon/restaurant_recommender_frontend">Github repo</a>
+        </p>
+        <p>
+          Uses the Yelp API to find restaurants by zipcode and matches friends to a mutually agreed on location.
+        </p>
 
-        <h1>TODO</h1>
-        <p>add github repo.. more images.. more info in general</p>
-        <p>add nav for projects</p>
+        <h3>
+          Django backend
+        </h3>
+        <p>
+          <a href="https://github.com/kiloplatoon/restaurant_recommender_backend">Github repo</a>
+        </p>
+        <p>
+          Uses a postgresql database to manage the data and knox security for authentication.
+        </p>
+
 			</article>
 		
 
