added youtube link for dinnr

--- a/pages/Dinnr.html
+++ b/pages/Dinnr.html
@@ -61,6 +61,8 @@
         </h3>
         <p>
           <a href="https://github.com/kiloplatoon/restaurant_recommender_frontend">Github repo</a>
+          <br />
+          <a href="https://youtu.be/KsmD_bADFCo">YouTube demo</a>
         </p>
         <p>
           Uses the Yelp API to find restaurants by zipcode and matches friends to a mutually agreed on location.
