attempted fix to dinnr image

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 		<!-- Feature 1 -->
 			<article id="second" class="container box style1 right">
-				<a href="./pages/PC_Tech.html" class="image fit"><img src="images/fulls/PC_Tech_app.PNG" alt="" style="width:500px;height:auto;top:22%;left:0px;"/></a>
+				<a href="./pages/PC_Tech.html" class="image fit"><img src="images/fulls/PC_Tech_app.PNG" alt="" style="width:100%;height:auto;top:22%;left:0px;"/></a>
 				<div class="inner" id='pc-tech'>
 					<header>
 						<h2>PC Tech</h2>
@@ -76,7 +76,7 @@
 
 		<!-- Feature 2 -->
 			<article class="container box style1 left" style="align-items: center">
-				<a href="./pages/Dinnr.html" class="image fit"><img src="images/fulls/Dinnr.PNG" alt="" style="width:auto;height:100%;vertical-align: middle"/></a>
+				<a href="./pages/Dinnr.html" class="image fit"><img src="images/fulls/Dinnr_tile.png" alt="" style="width:auto;height:100%;vertical-align: middle;left: -10%;"/></a>
 				<div class="inner">
 					<header>
 						<h2>Dinnr<br />
@@ -90,8 +90,8 @@
 			<article class="container box style2">
 				<header>
 					<h2>More projects</h2>
-					<p>Soon to come<br />
-					don't rush me.</p>
+					<p>Django To-do application<br />
+					React/Django Whiteboard application</p>
 				</header>
 				<!-- <div class="inner gallery">
 					<div class="row gtr-0">
@@ -114,7 +114,7 @@
 				<header>
 					<h2>Contact me</h2>
 				</header>
-				<form method="post" action="#">
+				<form action='mailto:richardm3988@gmail.com' method="post" action="#">
 					<div class="row gtr-50">
 						<div class="col-6 col-12-mobile"><input type="text" class="text" name="name" placeholder="Name" /></div>
 						<div class="col-6 col-12-mobile"><input type="text" class="text" name="email" placeholder="Email" /></div>
