--- a/pages/PC_Tech.html
+++ b/pages/PC_Tech.html
@@ -47,7 +47,7 @@
 				<header>
 					<h2>Overview</h2>
           <p>I created this application while working at a local hospital as a PC Tech.  Over the years I built a collection of powershell scripts, which I decided to turn into one application.  I used the python module 'tkinter' to build the GUI and the 'matplotlib' library to show reports based off the networks ActiveDirectory.</p>
-          <p>The application had the ability to backup user data to their networked drive, clear old profiles on a workstation, blab blalkbj alk, ablkjb , ablkbj ,  hibadi jibadi bo...</p>
+          <!-- <p>The application had the ability to backup user data to their networked drive, clear old profiles on a workstation, blab blalkbj alk, ablkjb , ablkbj ,  hibadi jibadi bo...</p> -->
         </header>
 			</article>
 		
