changed resume link to file icon

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 			<ul class="icons">
 				<li><a href="https://github.com/RMaldonado12" class="icon brands fa-github"><span class="label">Github</span></a></li>
 				<li><a href="https://www.linkedin.com/in/richardgmaldonado/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-				<li><a href="https://resume.creddle.io/resume/1zf7r60x2ds" style="font-weight:bold;"><span class="label">Resume</span></a></li>
+				<li><a href="https://resume.creddle.io/resume/1zf7r60x2ds" style="font-weight:bold;"><span class="far fa-file"></span></a></li>
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
