--- a/pages/PC_Tech.html
+++ b/pages/PC_Tech.html
@@ -52,18 +52,18 @@
 			</article>
 		
 
-		<section id="footer">
-			<ul class="icons">
-				<li><a href="https://github.com/RMaldonado12" class="icon brands fa-github"><span class="label">Github</span></a></li>
-				<li><a href="https://www.linkedin.com/in/richardgmaldonado/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-				<li><a href="https://resume.creddle.io/resume/1zf7r60x2ds" style="font-weight:bold;"><span class="label">Resume</span></a></li>
-			</ul>
-			<div class="copyright">
-				<ul class="menu">
-					<li>&copy; Richard Maldonado. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</section>
+      <section id="footer">
+        <ul class="icons">
+          <li><a href="https://github.com/RMaldonado12" class="icon brands fa-github"><span class="label">Github</span></a></li>
+          <li><a href="https://www.linkedin.com/in/richardgmaldonado/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+          <li><a href="https://resume.creddle.io/resume/1zf7r60x2ds" style="font-weight:bold;"><span class="far fa-file"></span></a></li>
+        </ul>
+        <div class="copyright">
+          <ul class="menu">
+            <li>&copy; Richard Maldonado. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          </ul>
+        </div>
+      </section>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
