cleaned up dropdown buttons

--- a/pages/Dinnr.html
+++ b/pages/Dinnr.html
@@ -54,7 +54,8 @@
 
 				<header>
 					<h2>Overview</h2>
-          <p>Group project created in Code Platoon coding bootcamp</p>
+          <p>Group project created in Code Platoon coding bootcamp.  Matches friends with a mutual restaurant in a tinder-like app.</p>
+          <a href="https://youtu.be/KsmD_bADFCo">YouTube demo</a>
         </header>
         <h3>
           React frontend
@@ -62,7 +63,6 @@
         <p>
           <a href="https://github.com/kiloplatoon/restaurant_recommender_frontend">Github repo</a>
           <br />
-          <a href="https://youtu.be/KsmD_bADFCo">YouTube demo</a>
         </p>
         <p>
           Uses the Yelp API to find restaurants by zipcode and matches friends to a mutually agreed on location.
