--- a/pages/PC_Tech.html
+++ b/pages/PC_Tech.html
@@ -18,7 +18,7 @@
     <article class="container box style2" >
       <div class="dropdown" style="border: 1px solid white;">
         <button href='./' class="dropbtn">PC Tech</button>
-        <div class="dropdown-content">
+        <div class="dropdown-content" style="min-width: 232px;">
           <a href="./Dinnr.html">Dinnr</a>
           <a href="#">Todo</a>
           <a href="../index.html">Home</a>
