fixed project scroll button

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			</section>
 		
 		<!-- Feature 2 -->
-		<article class="container box style1 left" style="align-items: center">
+		<article id="second" class="container box style1 left" style="align-items: center">
 			<a href="./pages/Dinnr.html" class="image fit"><img src="images/fulls/Dinnr_tile.png" alt="" style="width:auto;height:100%;vertical-align: middle;left: -10%;"/></a>
 			<div class="inner">
 				<header>
@@ -78,9 +78,9 @@
 				<p>Fullstack web application allowing two or more users to take the guessing part out of finding a place to eat together. Application uses a Django backend with postgres and a React frontend.</p>
 			</div>
 		</article>
-		
+
 		<!-- Feature 1 -->
-			<article id="second" class="container box style1 right">
+			<article class="container box style1 right">
 				<a href="./pages/PC_Tech.html" class="image fit"><img src="images/fulls/PC_Tech_app.PNG" alt="" style="width:100%;height:auto;top:22%;left:0px;"/></a>
 				<div class="inner" id='pc-tech'>
 					<header>
