added links for github linkedin and resume to top of page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 			<section id="header">
 				<header>
 					<h1>Richard Maldonado</h1>
+					Software Engineer | Computer Technician | Military Vet
+					<ul class="icons">
+						<li><a href="https://github.com/RMaldonado12" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/richardgmaldonado/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://resume.creddle.io/resume/1zf7r60x2ds" style="font-weight:bold;"><span>Resume</span></a></li>
+					</ul>
 					<p>Military Veteran turned software engineer specializing in developing custom applications to improve workflows. Obsessed with learning new technology innovations and excited to apply my skills on a thriving technical team. </p>
 				</header>
 				<footer>
@@ -125,10 +131,10 @@
 
 	
 		<section id="footer">
-			<ul class="icons">
+			<ul class="icons" style="left: -10px;">
 				<li><a href="https://github.com/RMaldonado12" class="icon brands fa-github"><span class="label">Github</span></a></li>
 				<li><a href="https://www.linkedin.com/in/richardgmaldonado/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-				<li><a href="https://resume.creddle.io/resume/1zf7r60x2ds" style="font-weight:bold;"><span class="far fa-file"></span></a></li>
+				<li><a href="https://resume.creddle.io/resume/1zf7r60x2ds" style="font-weight:bold;"><span class='far fa-file-alt'></span></a></li>
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
